src/test/resources/lab2-samples/bad2.decaf
void main() {
  int a;

  here is some gobbledy gook;
}
